syntax = "proto3";
package summa.proto;

import "summa/proto/query.proto";


// Main entrypoint for `Summa` that accepts queries to execute
service SearchApi {
  rpc search (SearchRequest) returns (SearchResponse) {}
}

// Requests
message SearchRequest {
  // The index name or alias
  string index_alias = 1;
  // Query DSL. Use `MatchQuery` to pass a free-form query
  Query query = 2;
  // Every collector is responsible of processing and storing documents and/or their derivatives (like counters)
  // to return them to the caller
  repeated Collector collectors = 3;
  // Extra fields used only for logging purposes
  map<string, string> tags = 4;
}
